# aws-codebuild-status

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  aws-codebuild-status_server
aws/: Cargo.toml
aws/src/: aws.rs  code_build_project.rs  codebuild_result.rs  error.rs  lib.rs  output.rs  project.rs  status.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/output/: output.rs  terminal.rs  web.rs
cli/templates/: codebuild.html
core/: Cargo.toml
core/src/: aws.rs  aws_cli.rs  main.rs  terminal.rs
derive/: Cargo.toml
derive/src/: lib.rs  status.rs
lambda/: Cargo.toml
lambda/src/: main.rs
server/: Cargo.toml
server/src/: build.rs  main.rs  template.rs
server/templates/: codebuild_overview.html
src/: aws.rs  code_build_project.rs  main.rs  project.rs
src/output/: output.rs  terminal.rs  web.rs
templates/: codebuild.html
terminal/: Cargo.toml
terminal/src/: lib.rs
web/: Cargo.toml
web/src/: lib.rs
web/templates/: codebuild.html  view.html
