[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status"
readme = "README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.5.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[dependencies]
askama = "0.8.0"
chrono = "0.4.6"
clap = "2.33.0"
colored = "1.8.0"
prettytable-rs = "0.8.0"
rusoto_codebuild = "0.39.0"
rusoto_core = "0.39.0"