[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status_aws"
readme = "README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.6.0"

[dependencies]
chrono = "0.4.6"
log = "0.4.6"
loggify = "1.1.0"
serde = { version = "1.0.92", features = ["derive"] }
rusoto_codebuild = "0.39.0"
rusoto_core = "0.39.0"