[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status_aws"
readme = "../README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.6.0"

[dependencies]
chrono = "0.4.10"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
rusoto_codebuild = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_core = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }