
[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status"
readme = "../README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.6.0"

[dependencies]
askama = "0.9.0"
aws-codebuild-status_aws = { path = "../aws", version = "0.6.0" }
chrono = "0.4.10"
clap = "2.33.0"
colored = "1.9.3"
prettytable-rs = "0.8.0"
tokio = { version = "0.2.13", features = ["full"] }