[package]
name = "aws-codebuild-status"
version = "0.2.0"
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"

[dependencies]
aws-codebuild-status_derive = { path = "../derive" }
aws-codebuild-status_terminal = { path = "../terminal" }
aws-codebuild-status_web = { path = "../web" }
clap = "2.33.0"
chrono = "0.4.6"
rusoto_core = "0.39.0"
rusoto_codebuild = "0.39.0"
rusoto_codecommit = "0.39.0"