[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status_derive"
readme = "../README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.3.0"

[dependencies]
