[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status_lambda"
readme = "README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.5.0"
publish = false

[dependencies]
aws-codebuild-status_aws = { path = "../aws" }
lambda_runtime = "0.2.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"