[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "AWS-Codebuild status in the terminal"
documentation = "https://github.com/lholznagel/aws-codebuild-status"
edition = "2018"
homepage = "https://github.com/lholznagel/aws-codebuild-status"
license = "MIT"
name = "aws-codebuild-status_terminal"
readme = "../README.md"
repository = "https://github.com/lholznagel/aws-codebuild-status"
version = "0.3.0"

[dependencies]
aws-codebuild-status_derive = { path = "../derive", version = "0.3.0" }
colored = "1.8.0"
prettytable-rs = "0.8.0"